test/Harper/Tests/Bad/issue007_unassignable.har
fun :: Integer -> Integer;
fun n = {
    var (y :: Integer) = 0;
    (x :: Integer) = n;
    y += 1;
    return x;
};

main :: Integer -> Integer;
main = {
    fun := (\(n :: Integer) => n);
    return fun;
};